# automata_playground

./: Cargo.toml
baseview_wgpu/: Cargo.toml
baseview_wgpu/src/: main.rs
iced_wgpu_rainbow_gain/: Cargo.toml  README.md  bundler.toml
iced_wgpu_rainbow_gain/src/: editor.rs  lib.rs
src/: lenia_widget.rs  main.rs
src/shaders/: lenia.wgsl  triangle_shader.wgsl
