[package]
name = "baseview_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseview = {git = "https://github.com/RustAudio/baseview.git"}
bytemuck = "1.15.0"
pollster = "0.3.0"
raw-window-handle = "0.6.1"
rtrb = "0.3.0"
softbuffer = "0.4.2"
wgpu = "0.20.0"
